--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.2.5",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
+    "es6-promisify": "^5.0.0",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
     "express-jwt": "^5.1.0",
@@ -28,6 +29,7 @@
     "history": "^4.5.1",
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
+    "mongodb": "^2.2.24",
     "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
@@ -35,6 +37,7 @@
     "pretty-error": "^2.0.2",
     "query-string": "^4.3.1",
     "react": "^15.4.2",
+    "react-bootstrap": "^0.30.8",
     "react-dom": "^15.4.2",
     "sequelize": "^3.30.1",
     "source-map-support": "^0.4.11",
