--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   ],
   "dependencies": {
     "babel-polyfill": "^6.22.0",
+    "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.4.7",
     "body-parser": "^1.16.0",
     "classnames": "^2.2.5",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.3",
     "core-js": "^2.4.1",
     "es6-promisify": "^5.0.0",
     "express": "^4.14.1",
     "express-graphql": "^0.6.3",
     "express-jwt": "^5.1.0",
+    "express-session": "^1.15.1",
     "fastclick": "^1.0.6",
     "fbjs": "^0.8.9",
     "graphql": "^0.9.1",
@@ -30,10 +33,14 @@
     "isomorphic-style-loader": "^1.1.0",
     "jsonwebtoken": "^7.2.1",
     "mongodb": "^2.2.24",
+    "mongoose": "^4.8.6",
+    "morgan": "^1.8.1",
     "node-fetch": "^1.6.3",
     "normalize.css": "^5.0.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
+    "passport-jwt": "^2.2.1",
+    "passport-local": "^1.0.0",
     "pretty-error": "^2.0.2",
     "query-string": "^4.3.1",
     "react": "^15.4.2",
