--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "query-string": "^4.3.1",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.8",
+    "react-cookie": "^1.0.5",
     "react-dom": "^15.4.2",
     "sequelize": "^3.30.1",
     "source-map-support": "^0.4.11",
